--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "chokidar": "^1.6.1",
     "textlint": "^7.2.1",
     "textlint-rule-preset-jtf-style": "^2.2.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
