--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "eslint": "^3.13.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0"
+  },
+  "scripts": {
+    "watch": "node watchMarkdownFile.js"
   }
 }
